<package format="2">
	<name>ct_models</name>
	<version>0.3.0</version>
	<description>dynamics models for adrl ct</description>

	<maintainer email="neunertm@gmail.com">Michael Neunert</maintainer>
	<maintainer email="markusgft@gmail.com">Markus Giftthaler</maintainer>

	<license>Apache v2</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>ct_core</depend>
	<depend>ct_rbd</depend>

</package>
