<package format="2">
	<name>ct_models</name>
	<version>3.0.2</version>
	<description>
        Control toolbox - models module.
	</description>

	<maintainer email="markusgft@gmail.com">Markus Giftthaler</maintainer>

	<license>BSD-2</license>

	<buildtool_depend>cmake</buildtool_depend>

	<depend>ct_rbd</depend>
	<exec_depend>catkin</exec_depend>	<!-- ROS compatibility-->

	<export>		<!-- Specify that this is not a ROS package-->
		<build_type>cmake</build_type>
	</export>
</package>
